--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.10"
   }
 }
